--- a/html/about.html
+++ b/html/about.html
@@ -11,6 +11,14 @@
         body {
             font-family: 'Roboto', sans-serif;
         }
+
+        .font-courier {
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .text-green-900 {
+            color: #334834;
+        }
     </style>
     <title>Startsida</title>
 </head>
@@ -26,9 +34,9 @@
             </a>
             <nav class="flex space-x-8">
                 <ul class="flex space-x-4 text-lg">
-                    <li><a class="text-white hover:text-yellow-500 transition duration-300" href="html/meny.html">SE
+                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="html/meny.html">SE
                             MENY</a></li>
-                    <li class="bokabord"><a class="text-white hover:text-yellow-500 transition duration-300"
+                    <li class="bokabord"><a class="text-white hover:text-yellow-500 transition duration-300 font-courier"
                             href="../html/bokabord.html">BOKA HÄR!</a></li>
                 </ul>
             </nav>
@@ -42,8 +50,8 @@
             </section>
 
             <section class="main2 bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-center text-green-900 text-5xl font-bold mb-6">OM RESTAURANGEN</h2>
-                <p class="text-center text-gray-700 text-lg leading-relaxed">
+                <h2 class="text-center text-green-900 text-5xl font-bold mb-6 font-courier">OM RESTAURANGEN</h2>
+                <p class="text-center text-green-900 text-lg leading-relaxed font-bold font-courier">
                     I vår livfulla restaurang i Malmö erbjuds en härlig blandning av mat, dryck och stämning från den
                     världens alla gatukulturer! Den varma gästvänliga kulturen där maten utgör en del av både festens och
                     vardagens gemenskap är grunden i i vårt kök. Det är just den härliga kulturen vi vill att du ska få
@@ -78,7 +86,7 @@
         </aside>
 
         <!-- Footer -->
-        <footer style="background-color: #334834; padding: 1.5rem; border-radius: 0.75rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-top: 2rem;" class="text-center text-white">
+        <footer style="background-color: #334834; padding: 1.5rem; border-radius: 0.75rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-top: 2rem;" class="text-center text-white font-courier">
             <div class="instagram-grid__item">
                 <p>
                     HighSt <br>
