--- a/src/html/bokabord.html
+++ b/src/html/bokabord.html
@@ -42,16 +42,16 @@
 <div class="container mx-auto p-4">
     <!-- Header -->
     <header class="flex justify-between items-center bg-green-900 p-4 rounded shadow-lg mb-8">
-        <a class="site-logo__btn" href="index.html">
+        <a class="site-logo__btn" href="/src/index.html">
             <img class="site-logo__expanded w-16 h-16"
                 src="../images/highStMarketDeliLogo.png"
                 alt="High Street Deli Home">
         </a>
         <nav class="flex space-x-8">
             <ul class="flex space-x-4 text-lg">
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="index.html">STARTSIDAN</a></li>
+                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="/src/index.html">STARTSIDAN</a></li>
                 <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="meny.html">SE MENY</a></li>
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="bokabord.html">BOKA HÄR!</a></li>
+                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="/bokabord.html">BOKA HÄR!</a></li>
             </ul>
         </nav>
     </header>
