--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="../src/dist/output.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -40,21 +40,21 @@
         <header class="flex justify-between items-center bg-green-900 p-4 rounded shadow-lg mb-8">
             <a class="site-logo__btn" href="index.html">
                 <img class="site-logo__expanded w-16 h-16"
-                    src="../images/highStMarketDeliLogo.png"
+                    src="../src/images/highStMarketDeliLogo.png"
                     alt="High Street Deli Home">
             </a>
             <nav class="flex space-x-8">
                 <ul class="flex space-x-4 text-lg">
-                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="index.html">STARTSIDAN</a></li>
-                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="meny.html">SE MENY</a></li>
-                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="bokabord.html">BOKA HÄR!</a></li>
+                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="/src/index.html">STARTSIDAN</a></li>
+                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="/src/html/meny.html">SE MENY</a></li>
+                    <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="/src/html/bokabord.html">BOKA HÄR!</a></li>
                 </ul>
             </nav>
         </header>
 
         <!-- Hero Section -->
         <section class="hero bg-cover bg-center mb-8 rounded shadow-lg"
-            style="background-image: url('../images/highStreetMarjetAndDeli.jpg'); height: 500px;">
+            style="background-image: url('/src/images/highStreetMarjetAndDeli.jpg'); height: 500px;">
             <div class="flex items-center justify-center h-full bg-black bg-opacity-50 rounded">
                 <h1 class="text-white text-6xl font-bold font-courier ">Välkommen till High Street Deli</h1>
             </div>
@@ -115,7 +115,7 @@
         <!-- Gallery Section -->
         <section class="gallery my-8 grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="aside1 img-container">
-                <img src="../images/cheeseBurger.jpeg"
+                <img src="../src/images/cheeseBurger.jpeg"
                     class="img2 rounded-lg shadow-lg" alt="Bild på Cheeseburgare">
             </div>
             <div class="aside2 img-container">
