--- a/src/meny.html
+++ b/src/meny.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../dist/output.css" rel="stylesheet">
-    <title>Startsida</title>
+    <title>Meny</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -48,9 +48,35 @@
 
     <!-- Main Content -->
     <main class="mb-8">
-        <section class="hero bg-cover bg-center mb-8 rounded shadow-lg" style="background-image: url('../images/highStreetMarjetAndDeli.jpg'); height: 500px;">
-            <div class="flex items-center justify-center h-full rounded">
-                <h1 class="text-white text-6xl font-bold font-courier">Säkra din plats!</h1>
+        <section class="main1">
+            <img src="../images/highStreetDeli933.jpg" class="img1 w-full h-auto rounded-lg shadow-lg mb-8" alt="Bild på hamburgermeny">
+        </section>
+
+        <section class="main2 bg-white p-6 rounded-lg shadow-lg">
+            <h2 class="text-center text-green-900 text-5xl font-bold mb-6 font-courier">MENY</h2>
+            <h3 class="text-center text-green-900 text-3xl font-bold mb-4 font-courier">Vad får vi lov att fresta med?</h3>
+            <div class="menu-container font-courier">
+                <p class="text-green-900 text-lg leading-relaxed font-bold font-courier">
+                    <h4 class="text-2xl font-bold mb-2">CALIFORNIA TURKEY (OR BEEF)</h4>
+                    Roast turkey or beef, green chile, melted pepper jack, the works, avocado, toasted sliced sourdough.
+                    <span class="block mt-2 mb-4">$12.50</span>
+
+                    <h4 class="text-2xl font-bold mb-2">DUTCH PUNCH</h4>
+                    Smoked turkey, extra bacon, jalapeño havarti, red onion, tomato, romaine, avocado, chipotle mayo, Dutch crunch.
+                    <span class="block mt-2 mb-4">$12.50</span>
+
+                    <h4 class="text-2xl font-bold mb-2">HOT PASTRAMI</h4>
+                    Lean roast pastrami, melted Swiss, the works, pepperoncini, toasted sliced sourdough.
+                    <span class="block mt-2 mb-4">$12.50</span>
+
+                    <h4 class="text-2xl font-bold mb-2">NEW YORK</h4>
+                    Pastrami, melted Swiss, extra meat, extra cheese, mayo, dijon, yellow mustard, extra pickle, toasted sliced rye.
+                    <span class="block mt-2 mb-4">$13.75</span>
+
+                    <h4 class="text-2xl font-bold mb-2">SPRING CLUB</h4>
+                    Roast turkey, bacon, melted cheddar, ranch, shrettuce, cucumber, tomato, mayo, French roll.
+                    <span class="block mt-2 mb-4">$12.50</span>
+                </p>
             </div>
         </section>
     </main>
@@ -74,7 +100,6 @@
                 213 71 Malmö <br>
                 +46 40 44 20 25 <br>
             </p>
-            <a class="hover:text-yellow-500 transition duration-300" href="mailto:highst@example.com">highst@example.com</a>
         </div>
     </footer>
 </div>
