--- a/src/html/bokabord.html
+++ b/src/html/bokabord.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="../../dist/output.css" rel="stylesheet">
     <title>Boka bord</title>
     <style>
         body {
@@ -30,29 +30,30 @@
         }
     </style>
 </head>
+
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
     <!-- Header -->
     <header class="flex justify-between items-center bg-green-900 p-4 rounded shadow-lg mb-8">
-        <a class="site-logo__btn" href="index.html">
+        <a class="site-logo__btn" href="../index.html">
             <img class="site-logo__expanded w-16 h-16" src="../images/highStMarketDeliLogo.png" alt="High Street Deli Home">
         </a>
         <nav class="flex space-x-8">
             <ul class="flex space-x-4 text-lg">
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="index.html">STARTSIDAN</a></li>
+                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="../index.html">STARTSIDAN</a></li>
                 <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="meny.html">SE MENY</a></li>
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="bokabord.html">BOKA HÄR!</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Main Content -->
     <main class="mb-8">
-        <section class="hero bg-cover bg-center mb-8 rounded shadow-lg" style="background-image: url('../images/highStreetMarjetAndDeli.jpg'); height: 500px;">
-            <div class="flex items-center justify-center h-full rounded">
-                <h1 class="text-white text-6xl font-bold font-courier">Säkra din plats!</h1>
-            </div>
-        </section>
+        <section class="hero bg-cover bg-center mb-8 rounded shadow-lg"
+        style="background-image: url('../images/highStreetMarjetAndDeli.jpg'); height: 500px;">
+        <div class="flex items-center justify-center h-full rounded">
+            <h1 class="text-white text-6xl font-bold font-courier">Säkra din plats!</h1>
+        </div>
+    </section>
 
         <section class="main2 bg-white p-6 rounded-lg shadow-lg font-courier">
             <h2 class="text-center text-green-900 text-5xl font-bold mb-6">BOKA BORD</h2>
@@ -88,8 +89,8 @@
         </section>
     </main>
 
-    <!-- Aside Content -->
-    <aside class="my-8 grid grid-cols-1 md:grid-cols-2 gap-8">
+     <!-- Aside Content -->
+     <aside class="my-8 grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="aside1 img-container">
             <img src="../images/cheeseBurger.jpeg" class="img2 rounded-lg shadow-lg" alt="Bild på Cheeseburgare">
         </div>
@@ -111,4 +112,5 @@
     </footer>
 </div>
 </body>
+
 </html>
