--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,40 +31,55 @@
         }
     </style>
 </head>
+
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
     <!-- Header -->
     <header class="flex justify-between items-center bg-green-900 p-4 rounded shadow-lg mb-8">
         <a class="site-logo__btn" href="index.html">
-            <img class="site-logo__expanded w-16 h-16" src="../images/highStMarketDeliLogo.png" alt="High Street Deli Home">
+            <img class="site-logo__expanded w-16 h-16" src="images/highStMarketDeliLogo.png" alt="High Street Deli Home">
         </a>
         <nav class="flex space-x-8">
             <ul class="flex space-x-4 text-lg">
                 <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="index.html">STARTSIDAN</a></li>
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="meny.html">SE MENY</a></li>
-                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="bokabord.html">BOKA HÄR!</a></li>
+                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="html/meny.html">SE MENY</a></li>
+                <li><a class="text-white hover:text-yellow-500 transition duration-300 font-courier" href="html/bokabord.html">BOKA HÄR!</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Main Content -->
     <main class="mb-8">
-        <section class="hero bg-cover bg-center mb-8 rounded shadow-lg" style="background-image: url('../images/highStreetMarjetAndDeli.jpg'); height: 500px;">
+        <section class="hero bg-cover bg-center mb-8 rounded shadow-lg"
+        style="background-image: url('images/highStreetMarjetAndDeli.jpg'); height: 500px;">
             <div class="flex items-center justify-center h-full rounded">
                 <h1 class="text-white text-6xl font-bold font-courier">Säkra din plats!</h1>
             </div>
         </section>
-    </main>
 
-    <!-- Aside Content -->
-    <aside class="my-8 grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="aside1 img-container">
-            <img src="../images/cheeseBurger.jpeg" class="img2 rounded-lg shadow-lg" alt="Bild på Cheeseburgare">
-        </div>
-        <div class="aside2 img-container">
-            <img src="https://images.squarespace-cdn.com/content/v1/54dabf38e4b06c67da923d72/1604008240758-G3WEGDKR7R0JBQOV9A4E/BrowserPreview_tmp-2.jpg?format=1500w" class="img3 rounded-lg shadow-lg" alt="">
-        </div>
-    </aside>
+        <section class="main2 bg-white p-6 rounded-lg shadow-lg font-courier">
+            <h2 class="text-center text-green-900 text-5xl font-bold mb-6">OM RESTAURANGEN</h2>
+            <p class="text-center text-gray-700 text-lg leading-relaxed font-bold">
+                I vår livfulla restaurang i Malmö erbjuds en härlig blandning av mat, dryck och stämning från den
+                världens alla gatukulturer! Den varma gästvänliga kulturen där maten utgör en del av både festens och
+                vardagens gemenskap är grunden i i vårt kök. Det är just den härliga kulturen vi vill att du ska få
+                uppleva hos oss!
+                <br><br>
+                Varje kombination blir en smakexplosion av både färska och genuina råvaror! I våra kök blandas
+                matglädje
+                med säsongens färska råvaror för att skapa genuina smaker som ger dig känslan av att befinna dig på en
+                stämningsfull uteservering i Mexiko, Italien eller varför inte Thailand?
+                <br><br>
+                Oavsett om ni vill fira eller bara vill sätta guldkant på tillvaron så har vårt kök något för er! Häng
+                här en casual vardag, på After Work eller låt kvällen, stämningen och musiken ta dig vidare till en
+                loco
+                festkväll. Kom hit och njut av musiken, stämningen och de glada skratten på vår restaurang i Malmö.
+                Här
+                hittar du en mötesplats för alla tillfällen med god och smakrik mat från vår restaurang och spännande
+                drinkar i baren.
+            </p>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="bg-green-900 p-4 rounded text-center text-white font-courier shadow-lg mt-8">
@@ -74,9 +90,9 @@
                 213 71 Malmö <br>
                 +46 40 44 20 25 <br>
             </p>
-            <a class="hover:text-yellow-500 transition duration-300" href="mailto:highst@example.com">highst@example.com</a>
         </div>
     </footer>
 </div>
 </body>
+
 </html>
