added image in image folder instead of link to the net to the image

--- a/src/html/bokabord.html
+++ b/src/html/bokabord.html
@@ -95,7 +95,7 @@
             <img src="../images/cheeseBurger.jpeg" class="img2 rounded-lg shadow-lg" alt="Bild på Cheeseburgare">
         </div>
         <div class="aside2 img-container">
-            <img src="https://images.squarespace-cdn.com/content/v1/54dabf38e4b06c67da923d72/1604008240758-G3WEGDKR7R0JBQOV9A4E/BrowserPreview_tmp-2.jpg?format=1500w" class="img3 rounded-lg shadow-lg" alt="">
+            <img src="/src/images/highStHero.jpeg" class="img3 rounded-lg shadow-lg" alt="">
         </div>
     </aside>
 
