--- a/src/html/bokabord.html
+++ b/src/html/bokabord.html
@@ -95,7 +95,7 @@
             <img src="../images/cheeseBurger.jpeg" class="img2 rounded-lg shadow-lg" alt="Bild på Cheeseburgare">
         </div>
         <div class="aside2 img-container">
-            <img src="/src/images/highStHero.jpeg" class="img3 rounded-lg shadow-lg" alt="">
+            <img src="../images/highStHero.jpeg" class="img3 rounded-lg shadow-lg" alt="">
         </div>
     </aside>
 
